--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,11 +3,16 @@
 html {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+  box-sizing: border-box;
 }
-
+body {
+  width: 1600px;
+  max-width: 100%;
+}
 .main-content {
   position: relative;
   width: 100%;
+  margin: auto;
   top: 5.3125rem; /* To offset for fixed header. */
 }
 .center {
@@ -228,10 +233,12 @@ nav li:last-child {
     height: auto;
     background-color: transparent;
     border: none;
+    padding: 0;
   }
 
   #sign-up-cta .content {
     margin-top: 0;
+    width: 0;
   }
 
   #sign-up-cta .email {
@@ -402,12 +409,14 @@ nav li:last-child {
 }
 
 #quotes-section .quote {
-  padding-right: 1.875rem;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
   font-family: "Palatino", serif;
   font-size: 1.875rem;
   line-height: 1.1;
   font-style: italic;
   color: #4a4a4a;
+  text-align: left;
 }
 
 #quotes-section .quote-citation {
@@ -420,18 +429,26 @@ span.quote {
 
   #quotes-section .content {
     padding: 1.875rem .625rem;
+    flex-direction: column;
   }
 
   #quotes-section .quote {
     font-size: 1.5rem;
     line-height: 1.4;
-    text-align: left;
+    text-align: center;
   }
 
   #quotes-section .quote-citation {
     display: block;
     padding-top: 1rem;
     margin: auto;
+    padding-right: 1.5rem;
+  }
+  img.quote-citation {
+    padding-right: 1.5rem;
+  }
+  span.quote {
+    margin-right: 0;
   }
 }
 /* Footer */
