--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -401,6 +401,7 @@ nav li:last-child {
 #quotes-section .content {
   padding: 5rem 1.5rem;
   display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
